Ny modal for 'Legg til ny handleliste'

--- a/HHManager/src/main/webapp/handlelister.html
+++ b/HHManager/src/main/webapp/handlelister.html
@@ -9,9 +9,183 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="Javascript/nav.js"></script>
+    <link rel="stylesheet" type="text/css" href="CSS/handlelister.css">
+    <script src="Javascript/handleliste.js"></script>
+    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
+
 </head>
 <body>
-<h1> HER JOBBER TONI </h1>
+<div id="navbar"></div>
+<div id="utleggmodal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h3 class="modal-title"><span class="glyphicon glyphicon-credit-card"></span> Lag utlegg</h3>
+            </div>
+            <div class="modal-body">
+                <div class="utlegg">
+                    <h4 id="overskrift1">Valgte elementer</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item">Cras justo odio</li>
+                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                        <li class="list-group-item">Morbi leo risus</li>
+                        <li class="list-group-item">Porta ac consectetur ac</li>
+                        <li class="list-group-item">Vestibulum at eros</li>
+                    </ul>
+                </div>
+                <div class="medlemmer">
+                    <h4 id="overskrift2">Legg til medbetalere</h4>
+                    <a href="#" class="list-group-item ">List 1 <input title="toggle all" type="checkbox"
+                                                                       class="all pull-right"></a>
+                    <a href="#" class="list-group-item">Second item <input type="checkbox"
+                                                                           class="pull-right"></a>
+                    <a href="#" class="list-group-item">Third item <input type="checkbox" class="pull-right"></a>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Lukk</button>
+                <button type="button" class="btn btn-primary">Send utlegg</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div id="leggTilNyHandlelisteModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h3 class="modal-title"><span class="glyphicon glyphicon glyphicon-list-alt"></span> Legg til ny handleliste</h3>
+            </div>
+            <div class="modal-body">
+                <div id="nyHandleliste">
+                    <h4>Skriv navn til handlelisten</h4>
+
+                    <input id="handlelisteNavn" class="form-control" name="handlelisteNavn" placeholder="Handleliste navn" type="text">
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Lukk</button>
+                <button id="leggTilKnapp" type="button" class="btn btn-primary">Legg til</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Accordion with checkboxes-->
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <h1>Handlelister</h1>
+        <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading clearfix">
+                    <h4 class="panel-title pull-left" style="padding-top: 7.5px;">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                            Søndagslista</a>
+                    </h4>
+                    <div>
+                        <button type="button" class="btn btn-danger pull-right">Slett handleliste</button>
+                    </div>
+                </div>
+                <div id="collapse1" class="panel-collapse collapse in">
+                    <div class="panel-body">
+                        <div class="panel-body">
+                            <div class="list-group" id="list1">
+                                <a href="#" class="list-group-item ">List 1 <input title="toggle all" type="checkbox"
+                                                                                   class="all pull-right"></a>
+                                <a href="#" class="list-group-item">Second item <input type="checkbox"
+                                                                                       class="pull-right"></a>
+                                <a href="#" class="list-group-item">Third item <input type="checkbox"
+                                                                                      class="pull-right"></a>
+                                <a href="#" class="list-group-item">More item <input type="checkbox" class="pull-right"></a>
+                                <a href="#" class="list-group-item">Another <input type="checkbox"
+                                                                                   class="pull-right"></a>
+                                <form>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control"
+                                               placeholder="Legg til ny gjenstand i listen">
+                                        <div class="input-group-btn">
+                                            <button class="btn btn-default" type="submit">
+                                                <i class="glyphicon glyphicon-plus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </form>
+                                <br>
+                                <button id="utlegg" type="button" class="btn btn-primary pull-left" data-toggle="modal"
+                                        data-target="#utleggmodal">Lag utlegg
+                                </button>
+                                <!-- Rounded switch -->
+                                <h5 id="offtekst" class="pull-right">Offentlig</h5>
+                                <label class="switch pull-right">
+                                    <input type="checkbox">
+                                    <span class="slider round"></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                                Festliste</a>
+                        </h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div class="list-group" id="list2">
+                                <a href="#" class="list-group-item ">List 1 <input title="toggle all" type="checkbox"
+                                                                                   class="all pull-right"></a>
+                                <a href="#" class="list-group-item">Second item <input type="checkbox"
+                                                                                       class="pull-right"></a>
+                                <a href="#" class="list-group-item">Third item <input type="checkbox"
+                                                                                      class="pull-right"></a>
+                                <a href="#" class="list-group-item">More item <input type="checkbox" class="pull-right"></a>
+                                <a href="#" class="list-group-item">Another <input type="checkbox"
+                                                                                   class="pull-right"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                                    Vasking</a>
+                            </h4>
+                        </div>
+                        <div id="collapse3" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <div class="list-group" id="list3">
+                                    <a href="#" class="list-group-item ">List 1 <input title="toggle all"
+                                                                                       type="checkbox"
+                                                                                       class="all pull-right"></a>
+                                    <a href="#" class="list-group-item">Second item <input type="checkbox"
+                                                                                           class="pull-right"></a>
+                                    <a href="#" class="list-group-item">Third item <input type="checkbox"
+                                                                                          class="pull-right"></a>
+                                    <a href="#" class="list-group-item">More item <input type="checkbox"
+                                                                                         class="pull-right"></a>
+                                    <a href="#" class="list-group-item">Another <input type="checkbox"
+                                                                                       class="pull-right"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <button id="nyhandel" type="button" class="btn btn-primary pull-left" data-toggle="modal"
+            data-target="#leggTilNyHandlelisteModal">Legg til ny handleliste</button>
+        </div>
+    </div>
+    <div class="col-md-3"></div>
+</div>
+<div id = "modaldiv"></div>
 </body>
 </html>
