FIKSA ALT TILBAKE TIL TIDLIGERE VERSJON ETTER MERGE CRAZINESSSSSSS

--- a/HHManager/src/main/webapp/gjoremaal.html
+++ b/HHManager/src/main/webapp/gjoremaal.html
@@ -5,7 +5,7 @@
     <title>Household Manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="CSS/gjoremaal.css">
+    <link rel="stylesheet" type="text/css" href="CSS/gjøremål.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
@@ -17,8 +17,8 @@
 </div>
 <div class="row grid-divider">
     <div class="col-md-6">
-        <div class="nytt-gjoremaal">
-            <h2>Nytt gjoremaal</h2>
+        <div class="nytt-gjøremål">
+            <h2>Nytt gjøremål</h2>
             <br>
             <textarea rows="4" cols="40" placeholder="Hva må gjøres?"></textarea>
             <div class="dropdown">
@@ -52,8 +52,8 @@
     </div>
 
     <div class="col-md-6">
-        <div class="eksisterende-gjoremaal">
-            <h2>Mine gjoremaal</h2>
+        <div class="eksisterende-gjøremål">
+            <h2>Mine gjøremål</h2>
             <div class="mine-checkbox">
                 <div class="checkbox">
                     <label><input type="checkbox" value="">Option 1</label>
@@ -65,7 +65,7 @@
                     <label><input type="checkbox" value="" disabled>Option 3</label>
                 </div>
             </div>
-            <h2>Felles gjoremaal</h2>
+            <h2>Felles gjøremål</h2>
             <div class="mine-checkbox">
                 <div class="checkbox">
                     <label><input type="checkbox" value="">Option 1</label>
@@ -80,7 +80,7 @@
         </div>
     </div>
 
-    </div>
+</div>
 <div id = "modaldiv"></div>
 
 </body>
