--- a/HHManager/src/main/webapp/lagbruker.html
+++ b/HHManager/src/main/webapp/lagbruker.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
     <script src="Javascript/nav.js"></script>
 
+
     <title>Registrere bruker</title>
 
     <!-- endret av karol    javascript -> egen fil
@@ -49,7 +50,7 @@
             </div>
             <div class="checkbox">
                 <label>
-                    <label><input type="checkbox" name="terms"> Jeg godtar nb khbk <a href="#">Brukervilkårene</a>.</label>
+                    <label><input type="checkbox" name="terms"> Jeg godtar <a href="#">Brukervilkårene</a>.</label>
                 </label>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="button" id="registrerBtn">Registrer</button>
