--- a/HHManager/src/main/webapp/gjoremaal.html
+++ b/HHManager/src/main/webapp/gjoremaal.html
@@ -5,7 +5,7 @@
     <title>Household Manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="CSS/gjøremål.css">
+    <link rel="stylesheet" type="text/css" href="CSS/gjoremaal.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
