--- a/HHManager/src/main/webapp/nav.html
+++ b/HHManager/src/main/webapp/nav.html
@@ -28,7 +28,7 @@
                         <li ><a href="#" id ="nyHusstand" data-toggle="modal" data-target="#myModal">Lag ny husstand</a></li>
                     </ul>
                 </li>
-                <li><a href="#" id = "gjøremålsknapp">Gjøremål</a></li>
+                <li><a href="#" id = "gjoremaalsknapp">Gjøremål</a></li>
                 <li><a href="#" id="kalenderknapp">Kalender</a></li>
                 <li><a href="#" id="handlelisteknapp">Handlelister</a></li>
             </ul>
@@ -36,7 +36,7 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" id="oppgjørknapp"><span class="glyphicon glyphicon-credit-card"> -32NOK</span></a></li>
+                <li><a href="#" id="oppgjorknapp"><span class="glyphicon glyphicon-credit-card"> -32NOK</span></a></li>
                 <li><a href="#" id="olanormannknapp">Ola Normann</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-bell"></span><span class="badge">42</span></a></li>
             </ul>
