--- a/HHManager/src/main/webapp/nav.html
+++ b/HHManager/src/main/webapp/nav.html
@@ -37,8 +37,8 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#" id="oppgjorknapp"><span class="glyphicon glyphicon-credit-card"> -32NOK</span></a></li>
-                <li><a href="#" id="olanormannknapp">Ola Normann</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-bell"></span><span class="badge">42</span></a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-credit-card"> -32NOK</span></a></li>
+                <li><a id="brukernavn" href="#">Ola Nordmann</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
