--- a/HHManager/src/main/webapp/forside.html
+++ b/HHManager/src/main/webapp/forside.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="CSS/felles.css">
     <link rel="stylesheet" type="text/css" href="CSS/forside.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
     <script src="Javascript/nav.js"></script>
+    <script src="Javascript/forside.js"></script>
+
 </head>
 <body>
 <!--NAVBAR-->
@@ -22,7 +23,7 @@
 
             <!--KOMMENTAR MED AVATAR-->
             <div class="container-fluid container-nyhetsoppdatering">
-                <h2>Nyhetsoppdatering</h2>
+                <h2 id="nyhet">Nyhetsoppdatering</h2>
                 <br>
                 <div class="media">
                     <div class="media-left">
