endret og ferdiggjort html og css for profil

--- a/HHManager/src/main/webapp/profil.html
+++ b/HHManager/src/main/webapp/profil.html
@@ -6,41 +6,133 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/profil.css">
+    <link rel="stylesheet" type="text/css" href="CSS/felles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
     <script src="Javascript/nav.js"></script>
+
 </head>
 <body>
-<div id="navbar">
-</div>
-
-<div class = "row grid-divider">
-    <div class = "col-md-4">
-        <a href="https://some.addres" imageanchor="1"><img align="left" src="web-res/profileicon.png" width="14%" border="0"></a><h1>Ola Normann</h1>
-        <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-        <input id="email" type="email" class="form-control" name="email" placeholder="olanormann.gmail.com">
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="button"> Endre epost</button>
-    </div>
-    <div class = "col-md-2">
-    </div>
-
-    <div class = "col-md-6">
-        <h2>Dine husstander:</h2>
-        <div class="husstander">
-            <form action="">
-                <p><span class="glyphicon glyphicon-star"></span>Husstand 1 <input type="radio" name="favoritt" value="hus1"> Sett favoritt <br></p>
-                <p><span class="glyphicon glyphicon-heart"></span>Husstand 2 <input type="radio" name="favoritt" value="hus2"> Sett favoritt <br></p>
-                <p><span class="glyphicon glyphicon-remove"></span>Husstand 3 <input type="radio" name="favoritt" value="hus3"> Sett favoritt <br></p>
-                <p align="right">
-                    <a href="#"><span class="glyphicon glyphicon-plus-sign"></span></a>
-                </p>
-            </form>
+<div id="epostmodal" class= "modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title"> <span class="glyphicon glyphicon-envelope"></span> Endre epostadresse</h4>
+            </div>
+            <div class="modal-body">
+                <div class="endrepost">
+                    <p>Ny epostadresse</p>
+                    <input id="nyepost" type="text" class="form-control" name="textfield" placeholder="Skriv ny epostadresse her">
+                </div>
+                <br>
+                <div class="bekreftepost">
+                    <p>Bekreft ny epostadresse</p>
+                    <input id="nyepost2" type="text" class="form-control" name="textfield" placeholder="Bekreft ny epostadresse her">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Lukk</button>
+                <button type="button" class="btn btn-primary">Lagre endringer</button>
+            </div>
         </div>
     </div>
 </div>
-
-
+<div id="passordmodal" class= "modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title"> <span class="glyphicon glyphicon-lock"></span> Endre passord</h4>
+            </div>
+            <div class="modal-body">
+                <div class="endrepassord">
+                    <p>Nåværende passord</p>
+                    <input id="text" type="text" class="form-control" name="textfield" placeholder="Skriv nåværende passord her">
+                </div>
+                <br>
+                <div class="nypassord">
+                    <p>Nytt passord</p>
+                    <input id="navn" type="text" class="form-control" name="textfield" placeholder="Skriv nytt passord her">
+                </div>
+                <br>
+                <div class="bekreft">
+                    <p>Bekreft nytt passord</p>
+                    <input id="navn2" type="text" class="form-control" name="textfield" placeholder="Bekreft nytt passord her">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Lukk</button>
+                <button type="button" class="btn btn-primary">Lagre endringer</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="navbar"></div>
+<div id="navnmodal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title"><span class="glyphicon glyphicon-user"></span> Endre navn</h4>
+            </div>
+            <div class="modal-body">
+                <div class="endrenavn">
+                    <p>Navn:</p>
+                    <input id="nynavn" type="text" class="form-control" name="textfield" placeholder="Skriv navn her">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Lukk</button>
+                    <button id="endre" type="button" class="btn btn-primary">Endre navn</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row grid-divider">
+    <div class="col-md-6">
+        <a href="https://some.addres" imageanchor="1"><img align="left" src="web-res/profileicon.png" width="14%"
+                                                           border="0"></a>
+        <h1>Ola Normann</h1>
+        <div class="well well-sm">
+           olanormann@gmail.com
+        </div>
+        <button id="navnknapp" type="button" class="btn btn-primary pull-left" data-toggle="modal"
+                data-target="#navnmodal">Endre navn</button>
+        <button id="passord" type="button" class="btn btn-primary" data-toggle="modal" data-target="#passordmodal">Endre passord</button>
+        <button id="epostknapp" type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target="#epostmodal">Endre epost</button>
+    </div>
+    <div class="col-md-6" align="center">
+        <h2>Dine husstander </h2>
+        <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading clearfix">
+                    <h4 class="panel-title pull-left" style="padding-top: 7.5px;">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                            Hustand 1</a>
+                    </h4>
+                    <div>
+                        <button type="button" class="btn btn-danger pull-right">Slett husstand</button>
+                    </div>
+                </div>
+                <div id="collapse1" class="panel-collapse collapse in">
+                    <div class="panel-body">
+                        <div class="panel-body">
+                            <div class="list-group" id="list1">
+                                <a href="#" class="list-group-item ">List 1</a>
+                                <a href="#" class="list-group-item">Second item</a>
+                                <a href="#" class="list-group-item">Third item</a>
+                                <a href="#" class="list-group-item">More item</a>
+                                <a href="#" class="list-group-item">Another</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="modaldiv"></div>
 </body>
 </html>
