--- a/HHManager/src/main/webapp/profil.html
+++ b/HHManager/src/main/webapp/profil.html
@@ -11,7 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
     <script src="Javascript/nav.js"></script>
-
+    <script src="Javascript/endrepassord.js"></script>
 </head>
 <body>
 <div id="epostmodal" class= "modal fade">
