rett feil blant annet

--- a/HHManager/src/main/webapp/lagnyhusstand.html
+++ b/HHManager/src/main/webapp/lagnyhusstand.html
@@ -9,18 +9,18 @@
             <div class="modal-body">
                 <div class="husstand">
                     <p>Navn på husstanden</p>
-                    <input id="text" type="text" class="form-control" name="textfield" placeholder="Skriv navn her">
+                    <input id="navnHusstand" type="text" class="form-control" name="textfield" placeholder="Skriv navn her">
                 </div>
                 <div class="medlemmer">
                     <p>Legg til medlemmer:</p>
-                    <input id="navn" type="text" class="form-control" name="textfield" placeholder="Skriv navn her">
+                    <input id="navnMeldlemHusstand" type="text" class="form-control" name="textfield" placeholder="Skriv navn her">
                 </div>
-                <button type="button">Legg til</button>
+                <button id="leggTilMedlemKnapp" type="button">Legg til medlem</button>
             </div>
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Lukk</button>
-                <button type="button" class="btn btn-primary">Lagre husstand</button>
+                <button id="lagreHusKnapp" type="button" class="btn btn-primary">Lagre husstand</button>
             </div>
         </div>
     </div>
