Fiksa feil med handlelisteObjekt

--- a/HHManager/src/main/webapp/handlelister.html
+++ b/HHManager/src/main/webapp/handlelister.html
@@ -61,22 +61,34 @@
             <div class="modal-body">
                 <div id="nyHandleliste">
                     <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-6">
-                                <h4>Skriv navn til handlelisten</h4>
-                            </div>
-                            <div class="col-4" align="left">
-                                <h5 id="offentligKnapp" class="pull-right">Offentlig</h5>
-                                <label class="switch pull-right">
-                                    <input type="checkbox">
-                                    <span class="slider round"></span>
-                                </label>
-                            </div>
-                        </div>
+                            <h4>Skriv navn til handlelisten</h4>
+                            <h5 class="pull-right">Offentlig</h5>
+                            <label class="switch pull-right">
+                                <input id="offentligKnapp" type="checkbox">
+                                <span class="slider round"></span>
+                            </label>
+
+                        <!-- Tatt bort sammen med fristen
+                        <h5>Navn</h5>
+
+                        -->
 
                         <input id="handlelisteNavn" class="form-control" name="handlelisteNavn" placeholder="Handleliste navn" type="text">
-                    </div>
 
+                        <!-- Tatt bort foreløpig
+
+                        <br>
+                        <h5>Frist</h5>
+                        <div class="input-group date" id="handlelisteFristDato">
+                            <input class="form-control" type="text" placeholder="ÅÅÅÅ-MM-DD">
+                            <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                        </div>
+
+                        -->
+
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
